--- a/requirements.txt
+++ b/requirements.txt
@@ -21,11 +21,11 @@ Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
-ml-dtypes==0.3.2
+ml-dtypes==0.4.0
 msgpack==1.0.8
 namex==0.0.8
 numba==0.60.0
-numpy
+numpy==1.26.4
 opt-einsum==3.3.0
 optree==0.12.1
 packaging==24.1
@@ -41,12 +41,13 @@ scipy==1.14.0
 six==1.16.0
 soundfile==0.12.1
 soxr==0.4.0
-tensorboard==2.16.2
+tensorboard==2.17.0
 tensorboard-data-server==0.7.2
-tensorflow==2.16.2
-tensorflow-io==0.37.1
+tensorflow==2.17.0
+tensorflow-hub==0.16.1
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.4.0
+tf_keras==2.17.0
 threadpoolctl==3.5.0
 typing_extensions==4.12.2
 urllib3==2.2.2
