--- a/.gitignore
+++ b/.gitignore
@@ -160,7 +160,14 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 # .idea/
-/cache
 /.idea
-/playlists/
-/songs/
+
+
+# Exclude contents of cache, songs and playlists but include empty dirs
+cache/*
+songs/*
+playlists/*
+
+!cache/.gitkeep
+!songs/.gitkeep
+!playlists/.gitkeep
