--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,10 @@
--   repo: https://github.com/charliermarsh/ruff
-    rev: v0.0.237  # replace with the latest version of ruff
-    hooks:
-    -   id: ruff
-        name: ruff
-        entry: ruff --fix
-        language: python
-        files: \.py$
+repos:
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  # Ruff version.
+  rev: v0.8.6
+  hooks:
+    # Run the linter.
+    - id: ruff
+      args: [ --fix ]
+    # Run the formatter.
+    - id: ruff-format
