--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ dependencies = [
     "librosa>=0.10.2.post1",
     "pandas>=2.2.3",
     "pre-commit>=4.0.1",
+    "pyqt6>=6.8.0",
     "ruff>=0.8.6",
     "streamlit>=1.41.1",
+    "tensorflow>=2.18.0",
     "tensorflow-hub>=0.16.1",
     "tqdm>=4.67.1",
 ]
