--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,11 @@ requires-python = ">=3.9"
 dependencies = [
     "librosa>=0.10.2.post1",
     "pandas>=2.2.3",
+    "pathlib>=1.0.1",
     "pre-commit>=4.0.1",
     "pyqt6>=6.8.0",
     "ruff>=0.8.6",
+    "stqdm>=0.0.5",
     "streamlit>=1.41.1",
     "tensorflow>=2.18.0",
     "tensorflow-hub>=0.16.1",
