--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,19 +3,25 @@ name = "songcategoriser"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
+    "fastapi>=0.115.12",
     "librosa>=0.10.2.post1",
     "pandas>=2.2.3",
+    "passlib>=1.7.4",
     "pathlib>=1.0.1",
     "pre-commit>=4.0.1",
+    "pymongo>=4.12.0",
     "pyqt6>=6.8.0",
+    "python-jose>=3.4.0",
+    "python-multipart>=0.0.20",
     "ruff>=0.8.6",
     "stqdm>=0.0.5",
     "streamlit>=1.41.1",
     "tensorflow>=2.18.0",
     "tensorflow-hub>=0.16.1",
     "tqdm>=4.67.1",
+    "uvicorn>=0.34.2",
 ]
 
 [tool.ruff]
