--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "azure-identity>=1.21.0",
+    "azure-storage-blob>=12.25.1",
     "bcrypt>=4.3.0",
     "fastapi>=0.115.12",
     "httpx>=0.28.1",
