--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
+    "aiohttp>=3.11.18",
     "azure-identity>=1.21.0",
     "azure-storage-blob>=12.25.1",
+    "azure-storage-queue>=12.12.0",
     "bcrypt>=4.3.0",
     "fastapi>=0.115.12",
     "httpx>=0.28.1",
