--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,10 @@ dependencies = [
     "motor>=3.7.0",
     "pandas>=2.2.3",
     "passlib>=1.7.4",
-    "pathlib>=1.0.1",
+    "pip>=25.1.1",
     "pre-commit>=4.0.1",
     "pydantic[email]>=2.11.3",
+    "pyinstaller>=6.14.1",
     "pyqt5>=5.15.11",
     "python-dotenv>=1.1.0",
     "python-jose>=3.4.0",
