--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,8 @@ dependencies = [
 [tool.ruff]
 show-fixes = true
 line-length = 120
+lint.select = ["F401"]
+
 
 [tool.setuptools]
 packages = ["selecta"]
