--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "selecta"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.9"
 dependencies = [
     "aiohttp>=3.11.18",
     "azure-identity>=1.21.0",
@@ -17,17 +17,17 @@ dependencies = [
     "pandas>=2.2.3",
     "pip>=25.1.1",
     "pre-commit>=4.0.1",
-    "pydantic[email]>=2.11.3",
+    "pydantic[email]>=2.11.7",
     "pyinstaller>=6.14.1",
     "pyqt5>=5.15.11",
     "python-dotenv>=1.1.0",
     "python-jose>=3.4.0",
     "python-multipart>=0.0.20",
     "ruff>=0.8.6",
+    "scipy>=1.13.1",
     "stqdm>=0.0.5",
     "streamlit>=1.41.1",
     "tensorflow>=2.19.0",
-    "tensorflow-hub>=0.16.1",
     "tqdm>=4.67.1",
     "uvicorn>=0.34.2",
 ]
