--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "azure-storage-queue>=12.12.0",
     "bcrypt>=4.3.0",
     "fastapi>=0.115.12",
+    "gunicorn>=23.0.0",
     "httpx>=0.28.1",
     "librosa>=0.10.2.post1",
     "motor>=3.7.0",
