--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,11 @@ dependencies = [
     "pre-commit>=4.0.1",
     "pydantic[email]>=2.11.7",
     "pyinstaller>=6.14.1",
-    "pyqt5>=5.15.11",
+
+    # PyQt conditional by platform
+    "pyqt5>=5.15.11; platform_system == 'Windows'",
+    "pyqt5-qt5>=5.15.17; platform_system != 'Windows'",
+
     "python-dotenv>=1.1.0",
     "python-jose>=3.4.0",
     "python-multipart>=0.0.20",
