--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,11 @@ dependencies = [
     "uvicorn>=0.34.2",
 ]
 
+[tool.uv.required-environments]
+macos = ["macosx_10_13_x86_64", "macosx_11_0_arm64"]
+linux = ["manylinux2014_x86_64"]
+windows = ["win_amd64"]
+
 [tool.ruff]
 show-fixes = true
 line-length = 120
