add github action to build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,8 @@ dependencies = [
     "pydantic[email]>=2.11.7",
     "pyinstaller>=6.14.1",
 
-    # PyQt conditional by platform
-    "pyqt5>=5.15.11; platform_system == 'Windows'",
-    "pyqt5-qt5>=5.15.17; platform_system != 'Windows'",
+    "pyqt5==5.15.11",
+    "pyqt5-qt5==5.15.2",
 
     "python-dotenv>=1.1.0",
     "python-jose>=3.4.0",
