--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,9 @@ dependencies = [
     "pre-commit>=4.0.1",
     "pydantic[email]>=2.11.7",
     "pyinstaller>=6.14.1",
-    "pyqt5>=5.15.11",
+
+    # "pyqt5>=5.15.11",
+
     "python-dotenv>=1.1.0",
     "python-jose>=3.4.0",
     "python-multipart>=0.0.20",
@@ -32,6 +34,14 @@ dependencies = [
     "tqdm>=4.67.1",
     "uvicorn>=0.34.2",
 ]
+
+# PyQt5 version for Windows only
+[tool.uv.dependencies."pyqt5.win32"]
+version = "5.15.9"
+
+# PyQt5 version for macOS only
+[tool.uv.dependencies."pyqt5.macos"]
+version = "5.15.17"
 
 [tool.ruff]
 show-fixes = true
