--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "pydantic[email]>=2.11.7",
     "pyinstaller>=6.14.1",
 
-    # "pyqt5>=5.15.11",
+    "pyqt5==5.15.9",
 
     "python-dotenv>=1.1.0",
     "python-jose>=3.4.0",
@@ -34,15 +34,6 @@ dependencies = [
     "tqdm>=4.67.1",
     "uvicorn>=0.34.2",
 ]
-
-# PyQt5 version for Windows only
-[tool.uv.dependencies."pyqt5.win32"]
-version = "5.15.9"
-
-
-# PyQt5 version for macOS only
-[tool.uv.dependencies."pyqt5.macos"]
-version = "5.15.17"
 
 [tool.ruff]
 show-fixes = true
