--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "pyinstaller>=6.14.1",
 
     "pyqt5==5.15.9",
+    "pyqt5-qt5==5.15.9",
 
     "python-dotenv>=1.1.0",
     "python-jose>=3.4.0",
