--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
     "pydantic[email]>=2.11.7",
     "pyinstaller>=6.14.1",
 
-    "pyqt5>=5.15.9",
+    "pyqt5==5.15.9",
 
     "python-dotenv>=1.1.0",
     "python-jose>=3.4.0",
