--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ dependencies = [
     "scipy>=1.13.1",
     "stqdm>=0.0.5",
     "streamlit>=1.41.1",
-    "tensorflow>=2.19.0",
+    "tensorflow",
     "tqdm>=4.67.1",
     "uvicorn>=0.34.2",
 ]
