add github action to build

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
     "stqdm>=0.0.5",
     "streamlit>=1.41.1",
     "tensorflow",
+    'tensorflow-io-gcs-filesystem==0.31.0; sys_platform == "win32"',   # Windows
     "tqdm>=4.67.1",
     "uvicorn>=0.34.2",
 ]
