--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install uv
 
+      - name: Install Visual C++ Redistributable
+        run: |
+          choco install vcredist2015 -y
+
       - name: Install dependencies with uv
         run: uv sync
 
