--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,8 +32,8 @@ dependencies = [
     "scipy>=1.13.1",
     "stqdm>=0.0.5",
     "streamlit>=1.41.1",
-    "tensorflow",
-    'tensorflow-io-gcs-filesystem==0.31.0; sys_platform == "win32"',   # Windows
+    'tensorflow>=2.17.0; sys_platform == "darwin"',  # macOS
+    # 'tensorflow-io-gcs-filesystem==0.31.0; sys_platform == "win32"',   # Windows
     "tqdm>=4.67.1",
     "uvicorn>=0.34.2",
 ]
