--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,10 @@ jobs:
         run: |
           uv run pyinstaller selecta.spec --noconfirm
 
+      - name: Sign Code (for Apple)
+        run: |
+          codesign --deep --force --sign - dist
+
       - name: Upload macOS artifact
         uses: actions/upload-artifact@v4
         with:
