--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,37 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "aiohttp>=3.11.18",
-    "azure-identity>=1.21.0",
-    "azure-storage-blob>=12.25.1",
-    "azure-storage-queue>=12.12.0",
-    "bcrypt>=4.3.0",
-    "fastapi>=0.115.12",
-    "gunicorn>=23.0.0",
-    "httpx>=0.28.1",
-    "librosa>=0.10.2.post1",
-    "motor>=3.7.0",
-    "pandas>=2.2.3",
-    "pip>=25.1.1",
-    "pre-commit>=4.0.1",
-    "pydantic[email]>=2.11.7",
-    "pyinstaller>=6.14.1",
-
-    'PyQt5>=5.15.11; sys_platform == "darwin"',  # macOS
-    'PyQt5==5.15.11; sys_platform == "win32"',   # Windows
-    'PyQt5-Qt5==5.15.2; sys_platform == "win32"',   # Windows
-
-    "python-dotenv>=1.1.0",
-    "python-jose>=3.4.0",
-    "python-multipart>=0.0.20",
-    "ruff>=0.8.6",
+    "keras>=3.10.0",
+    "librosa>=0.11.0",
+    "pandas>=2.3.3",
+    "pyqt5>=5.15.11",
     "scipy>=1.13.1",
-    "stqdm>=0.0.5",
-    "streamlit>=1.41.1",
-    'tensorflow>=2.17.0; sys_platform == "darwin"',  # macOS
-    # 'tensorflow-io-gcs-filesystem==0.31.0; sys_platform == "win32"',   # Windows
-    "tqdm>=4.67.1",
-    "uvicorn>=0.34.2",
+    "tensorflow>=2.20.0",
+    "tqdm>=4.67.3",
 ]
 
 [tool.ruff]
